--- a/TestingforCausalAssociationsbetweenSmokingandSleepTroubles.Rmd
+++ b/TestingforCausalAssociationsbetweenSmokingandSleepTroubles.Rmd
@@ -7,6 +7,8 @@ output:
   html_document:
     df_print: paged
 ---
+Code and data supporting this analysis is available at https://github.com/ljyljyljyyy/TestingCausality
+
 # Abstract
 To determine whether smoking is a causal factor for sleep trouble, a logistic regression model with propensity score matching is applied on the 2009-10 NHANES dataset focusing on respondents over 17 years of age. Confounding factors such as depression and demographic measures are controled using propensity score matching in creating a basis non-smoking respondent group and a comparitive smoking respondent group with similar pretreatment factors. After adjusting for differences in baseline risk factors and performing logistic regression, regular smoking behavior is concluded as a statistically significant factor in causing sleep trouble.
 
@@ -71,9 +73,10 @@ $$
 $$
 Such\ that\ i= \lbrace1,\ldots,N \rbrace\ 
 $$
-Each respondent is denoted by i. The estimated propensity score represents each individual's probability of smoking based on the values of pretreatment controls. Forecast is used to create matches between each smoking respondent and a non-smoking respondent with the closest propensity score. The dataset is then reduced to only keep those matched.
+Each respondent is denoted by i. The estimated propensity score represents each individual's probability of smoking based on the values of pretreatment controls. Next, forecast is used to create matches between each smoking respondent and a non-smoking respondent with the closest propensity score. The dataset is then reduced to only keep those matched.
 
-A second logistic regression model was performed to fit the relationship between whether smoking is a significant factor in causing sleep trouble. The dataset used to fit the model now only consists of the matched non-smoking basis group and smoking comparison group. The model was chosen because the outcome variable of this study - sleep trouble is a binary variable. The null hypothesis is that all coefficients equal to zero, indicating that there exists no relationship between various predictors and sleep trouble. Each respondent is denoted by i. "Gender", "Depression", "PhyActive" and "Smoke" are categorical variables since the values are binary. They are included in the regression as dummy variables where the categorical variables are represented in a numerial form. The estimated regression represents each individual's probability of experiencing sleep trouble based on the values of age, gender, poverty, depression, physical activity and smoking.
+A second logistic regression model was performed to fit the relationship between whether smoking is a significant factor in causing sleep trouble. The dataset used to fit the model now only consists of the matched non-smoking basis group and smoking comparison group. The model was chosen because the outcome variable of this study - sleep trouble is a binary variable. The null hypothesis is that all coefficients equal to zero, indicating that there exists no relationship between various predictors and sleep trouble. Each respondent is denoted by i. The model takes "Age" and "Poverty" as numerical variables instead of grouping respondents into different age or ratio groups. The decision stems from the reason that the majority of the data cluster around the mean, and keeping numerical data ensures precision when making statistical inferences. "Gender", "Depression", "PhyActive" and "Smoke" are categorical variables since the values are binary and there is no intrinsic order to the categories. They are included in the regression as dummy variables where the categorical variables are represented in a numerial form. The estimated regression represents each individual's probability of experiencing sleep trouble based on the values of age, gender, poverty, depression, physical activity and smoking.
+
 $$
 log\ ( \frac{p_{slp\ i}}{1-p_{slp\ i}})=\beta_{0 }+\beta_{1} X_{age\ i}+\beta_{2} X_{gen\ i}+\beta_{3} X_{pov\ i}+\beta_{4} X_{dep\ i}+\beta_{5} X_{phy\ i}+ \beta_{6} X_{smoke\ i}
 $$
@@ -81,7 +84,7 @@ $$
 Such\ that\ i= \lbrace1,\ldots,N \rbrace\ 
 $$
 
-Various model assumptions were checked. "SleepTrouble" is a binary variable which fulfills the logistic model assumption of having a binary outcome variable. Since the survey employs stratified random sampling where simple random sampling without replacement in each strata was used, it fulfills the regression assumption of having independent observations and pairwise independent errors. There are 4,438 observations in the matched propensity score dataset used for logistic model construction, which satisfies a large sample size. More model diagnostics such as linearity and multicollinearity checks are performed to ensure that regression assumptions are fulfilled. Diagnostic results are included in the "Results" Section.
+Various model assumptions were checked to ensure that the estimates are unbiased and consistent. "SleepTrouble" is a binary variable which fulfills the logistic model assumption of having a binary outcome variable. Since the survey employs stratified random sampling where simple random sampling without replacement in each strata was used, it fulfills the regression assumption of having independent observations and pairwise independent errors. There are 4,438 observations in the matched propensity score dataset used for logistic model construction, which satisfies a large sample size. More model diagnostics such as linearity and multicollinearity checks are performed to ensure that regression assumptions are fulfilled. Diagnostic results are included in the "Results" Section.
 
 ```{r,echo=FALSE, message= FALSE}
 #predicting propensity score
@@ -158,11 +161,11 @@ data_for_table <- data.frame(Estimated_Parameters, Estimated_Coefficient, p_valu
 kable(data_for_table, caption = "Statistical Summary of Logistic Model for Sleep Trouble", digits = 4)
 ```
 
-Logistic model summary from table 2 results that Smoking has a coefficient of 0.6279 and a p-value < 0.001, reflecting that there exists causal relationship between smoking and sleep trouble. Model summary also shows that age, gender and depression are significant factors for developing sleep trouble. The coefficient is 0.0217 for age, -0.6579 for male, and 0.9783 for depression. They all have a p-value < 0.001. The dataset is based off the propensity score matching of a basis group of non-smoking respondents and a comparative group of smoking respondents with close pretreatment characteristics. Based on the basis and treatment groups, a logistic regression model was constructed, which accounted for "Age", "Gender", "Poverty", "Depression", "PhysActive", and "Smoke" variables. 
+With higher values representing increased log odds of experiencing sleep trouble, logistic model summary from table 2 results that Smoking has a coefficient of 0.6279 and a p-value < 0.001, indicating causal relationship between smoking and sleep trouble. Model summary also shows that age, gender and depression are significant factors for developing sleep trouble. The coefficient is 0.0217 for age, -0.6579 for male, and 0.9783 for depression. They all have a p-value < 0.001. However, "Poverty" and "PhysActive" have p-values > 0.05. The dataset is based off the propensity score matching of a basis group of non-smoking respondents and a comparative group of smoking respondents with close pretreatment characteristics. Based on the basis and treatment groups, a logistic regression model was constructed, which accounted for "Age", "Gender", "Poverty", "Depression", "PhysActive", and "Smoke" variables. 
 
 #### Linearity
 
-One of the main assumptions of logistic regression is that the log odds of the outcome variable and the predictors are assumed to have a linear relationship. The binned residual plot shows that there is almost no average residual outside the $\pm2$ SE bands and the average residuals are scattered around the horizontal axis, fulfilling the linearity assumption. 
+One of the main assumptions of logistic regression is that the log odds of the outcome variable and the predictors are assumed to have a linear relationship.Binned residual plots are obtained from categorizing the data into bins based on their fitted values, and then plotting the average residual versus the average fitted value for each bin (Gelman and Hill, 2007). Binned residual plot shows that there is almost no average residual outside the $\pm2$ SE bands and the average residuals are scattered around the horizontal axis, fulfilling the linearity assumption. 
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 library(arm)
@@ -202,14 +205,14 @@ In this study, a logistic regression model with propensity score matching is app
 Estimated_Parameters = c( "Age", "Gendermale", "Poverty", "DepressionYes", "PhysActiveYes", "SmokeYes")
 Estimated_Coefficient = c(0.021687,-0.657875,0.032233,0.978288, 0.022785,0.627946)
 Std_error = c(0.002087,-0.071925,0.023134,0.077306 , 0.074293,0.071773)
-z_value = c(6.648,-6.874,1.389,11.021  , 0.315,6.440 )
+z_value = c(6.648,-6.874,1.389,11.021, 0.315,6.440 )
 p_value = c(2e-16,2e-16, 0.194,2e-16,0.774 ,3.22e-16)
 
 data_for_table <- data.frame(Estimated_Parameters, Estimated_Coefficient,Std_error,z_value, p_value)
 kable(data_for_table, caption = "Statistical Summary of Logistic Model for Sleep Trouble", digits = 4)
 ```
 
-By looking at the coefficients of the predictor variables for predicting sleep trouble from table 4, the estimations closely align with the data distribution discovered in exploratory summary statistics analysis.The fitted logistic model reflects that holding all else constant, the log odds for experiencing sleep trouble is 0.6279 (p-value < 0.001) for smoking, verifying the association between the difference in sleep trouble percentages between smoking and non-smoking groups as seen in table 1 to be causal. In addition, age, gender and depression are also statistically significant factors that associate with sleep trouble. Holding all else constant, the log odds for experiencing sleep trouble increases by 0.0217 (p-value < 0.001) with an increase in one year of age. Confirming the observation of higher percentage of females experiencing sleep trouble than male from table 1, modeling results show that holding all else constant, the log odds of male experiencing sleep trouble is -0.6579. Depression has the strongest association with sleep trouble as its coefficient is 0.9783 (p-value < 0.001), indicating that holding all else constant, the log odds for experiencing sleep trouble for depressed individuals is as high as 0.9783. However, poverty and physical activity are not statistically significant factors in predicting sleep trouble since their p-values > 0.05 and the null hypothesis of having no relationship between the predictor and the outcome variable has failed to reject. These statistics show that older, depressed smoking female are significantly more likely to experience sleep trouble.
+By looking at the coefficients of the predictor variables for predicting sleep trouble from table 4, the estimations closely align with the data distribution discovered in exploratory summary statistics analysis. The fitted logistic model reflects that holding all else constant, the log odds for experiencing sleep trouble is 0.6279 (p-value < 0.001) for smoking, verifying the association between the difference in sleep trouble percentages between smoking and non-smoking groups as seen in table 1 to be causal. In addition, age, gender and depression are also statistically significant factors that associate with sleep trouble. Holding all else constant, the log odds for experiencing sleep trouble increases by 0.0217 (p-value < 0.001) with an increase in one year of age. Confirming the observation of higher percentage of females experiencing sleep trouble than male from table 1, modeling results show that holding all else constant, the log odds of male experiencing sleep trouble is -0.6579. Depression has the strongest association with sleep trouble as its coefficient is 0.9783 (p-value < 0.001), indicating that holding all else constant, the log odds for experiencing sleep trouble for depressed individuals is as high as 0.9783. However, poverty and physical activity are not statistically significant factors in predicting sleep trouble since their p-values > 0.05 and the null hypothesis of having no relationship between the predictor and the outcome variable has failed to reject. These statistics show that older, depressed smoking females are significantly more likely to experience sleep trouble.
 
 ## Conclusion
 
@@ -217,7 +220,7 @@ Based on logistic regression estimation with propensity score matching, regular 
 
 ## Weakness & Next Steps
 
-The dominant weakness of this analysis is that some significant pretreatment characteristics may be inadvertently omitted which may lead to omitted variable bias. Unlike an ideal randomized experiment, some significant covariate that is not measured in the survey may influence the prediction of smoking behavior and thus cause bias under propensity score matching. Although a number of predictor variables are already included in the model in predicting smoking as a treatment, the model can be improved by putting more variables into consideration. For instance, A.D. McNeill suggests that parental smoking behaviour and beliefs about the effects of smoking on health are potential factors that influence one's behavior of smoking. One future step of the study is to perform a follow-up survey on respondents to gain more detailed information on potential factors that may influence their behavior of smoking.
+The dominant weakness of this analysis is that some significant pretreatment characteristics may be inadvertently omitted which may lead to omitted variable bias. Unlike an ideal randomized experiment, some significant predictor that is not measured in the survey may influence the prediction of smoking behavior and thus cause bias under propensity score matching. Although a number of predictor variables are already included in the model in predicting smoking as a treatment, the model can be improved by putting more variables into consideration. For instance, A.D. McNeill suggests that parental smoking behaviour and beliefs about the effects of smoking on health are potential factors that influence one's behavior of smoking. One future step of the study is to perform a follow-up survey on respondents to gain more detailed information on potential factors that may influence their behavior of smoking.
 
 Another limitation of the study is the reliance on respondents' self report on whether they are experiencing sleep trouble. This may involve self report bias due to different individuals' interpretation of sleep trouble. For example, some respondents may characterize falling asleep 15 minutes after going to bed as experiencing sleep trouble, while others may define sleep trouble as being unable to fall asleep for more than 30 minutes after they go to bed. The interpretation of sleep trouble may also differ on the frequency. Some people may report experiencing sleep trouble when they struggle to fall asleep for one or two days, while others may define having sleep trouble if they struggle with falling asleep for more than seven days. To improve the estimation of the analysis, one can redefine the survey problems and clearly categorize sleep trouble based on the severeness and frequency. The severity of sleep trouble can be answered using an ordinal type of variable where respondents identify their time to fall asleep within certain ranges of time, for example, less than ten minutes / ten to thirty minutes / thirty to sixty minutes etc. Sleep trouble can also be specified based on the frequency. For instance, respondents will be asked whether they suffer from short-term (less than seven days) sleep trouble or long-term (more than seven days) sleep trouble. Properly defining the survey questions can help focus the scope of the study and produce more accurate results.
 
@@ -240,9 +243,8 @@ Fox J, Weisberg S (2019). An R Companion to Applied Regression, Third edition. S
 
 Xie Y (2020). knitr: A General-Purpose Package for Dynamic Report Generation in R. R package version 1.30, https://yihui.org/knitr/. 
 
-Functions to accompany A. Gelman and J. Hill, Data Analysis Using Regression and Multilevel/Hierarchical Models, Cambridge University Press, 2007.
-
 Harder, V. S., Morral, A. R., & Arkes, J. (2006). Marijuana use and depression among adults: testing for causal associations. Addiction, 101(10), 1463–1472. https://doi.org/10.1111/j.1360-0443.2006.01545.x
 
 McNeill, A. D., Jarvis, M. J., Stapleton, J. A., Russell, M. A., Eiser, J. R., Gammage, P., & Gray, E. M. (1989). Prospective study of factors predicting uptake of smoking in adolescents. Journal of epidemiology and community health, 43(1), 72–78. https://doi.org/10.1136/jech.43.1.72
 
+Gelman, A., & Hill, J. (2007). Data analysis using regression and multilevel/hierarchical models. Cambridge; New York: Cambridge University Press.
